<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>arlas-iam-parent</artifactId>
        <groupId>io.arlas.iam</groupId>
        <version>22.0.0-beta.7</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>arlas-iam-rest</artifactId>

    <dependencies>
        <dependency>
            <groupId>io.arlas.iam</groupId>
            <artifactId>arlas-iam-core</artifactId>
            <version>22.0.0-beta.7</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>